--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	id="WebApp_ID" version="3.1">
+	id="WebApp_ID" version="3.0">
 	<display-name>OfficeAutomation</display-name>
 	<!-- 验证码配置开始 -->
 	<servlet>
@@ -69,26 +69,49 @@
 	</servlet-mapping>
     <!-- 验证码配置结束 -->
     
-	<welcome-file-list>
+	<!-- <welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>default.html</welcome-file>
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
+	</welcome-file-list> -->
+
+		
+	 <context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:root-context.xml</param-value>
+	 </context-param> 
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
-	</context-param>
-	<filter>
-		<filter-name>struts2</filter-name>
-		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
-	</filter>
+	
+	<listener>
+	    <listener-class>com.oa.tool.SessionListener</listener-class>		
+	</listener>
+	
+	<!-- 使用spring自带的DispatcherServlet，刘杜康，2015年11月22日22:05:37 -->
+	
+	<servlet>
+        <servlet-name>springmvc</servlet-name>
+        <servlet-class>
+            org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+	 	 <init-param>
+        	<param-name>contextConfigLocation</param-name>
+        	<param-value>classpath:applicationContext.xml</param-value>
+    	</init-param> 
+        <load-on-startup>1</load-on-startup>    
+	</servlet>
 
+    <servlet-mapping>
+        <servlet-name>springmvc</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+	
 	<filter>
 		<filter-name>hibernateOpenSessionInViewFilter</filter-name>
 		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
@@ -107,12 +130,25 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<filter-mapping>
+<!-- 注释掉以下两段，刘杜康，2015年11月22日22:07:25 -->
+	<!-- <filter-mapping>
 		<filter-name>struts2</filter-name>
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
 		<url-pattern>*.jsp</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
+	
+<!-- <session-config> 
+      <session-timeout>30</session-timeout> 
+	</session-config>  
+
+<error-page> 
+<error-code>404</error-code> 
+<location>/WEB-INF/views/error/error404.jsp</location> 
+</error-page> 
+
+-->
+	
 </web-app>
